# whacked

./: .gitignore  LICENSE  Main.hs  Makefile  compile  test.c  test.py  test.result  test.s  test.wacc  wacc  wacc.s  whacked.cabal
Whacked/: AST.hs  FlowGraph.hs  IMF.hs  Itch.hs  LiveVariables.hs  Ops.hs  Scratch.hs  Tree.hs  Types.hs
Whacked/Backend/: ARM.hs
Whacked/Backend/ARM/: ASM.hs  Allocator.hs  Compiler.hs
Whacked/Frontend/: Generator.hs  Parser.hs  Validator.hs
Whacked/Optimizer/: ARMifier.hs  ConstantMover.hs  FlowGraph.hs  Generator.hs  Jumps.hs  LiveVariables.hs  RemovePHI.hs  SCCP.hs  Simplifier.hs  Translator.hs
