name:                whacked
version:             0.0.0.1
synopsis:            Whacked Compiler
license:             BSD3
license-file:        LICENSE
author:              Whacked Team
copyright:           (C) 2014 The Whacked Team. All rights reserved.
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable whacked
  main-is:             Main.hs
  build-depends:       base >= 4.7,
                       safe >= 0.3,
                       parsec >= 2.1
  default-language:    Haskell2010