name:                whacked
version:             0.0.0.1
synopsis:            Whacked Compiler
author:              Nandor Licker
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable whacked
  main-is:             Main.hs
  build-depends:       base >= 4.6,
                       safe >= 0.3,
                       parsec >= 2.1,
                       vector >= 0.5,
                       containers >= 0.5,
                       directory >= 1.2,
                       transformers >= 0.3,
                       mtl >= 2.2,
                       filepath >= 1.3
  default-language:    Haskell2010